unpackaged/main/default/objects/Account/fields/Regional_Manager__c.field-meta.xml
<CustomField>
    <fullName>Regional_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>It should always be set to a user.</inlineHelpText>
    <label>Regional Manager / MDM</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.ContactId</field>
            <operation>equals</operation>
            <value></value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>