unpackaged/main/default/objects/Account/fields/Sales_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Sales_Forecast__c</fullName>
    <inlineHelpText>Predicted monthly spend</inlineHelpText>
    <label>Sales Forecast</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>