unpackaged/main/default/objects/Account/fields/Sales_Target__c.field-meta.xml
<CustomField>
    <fullName>Sales_Target__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Target</label>
    <referenceTo>Sales_by_year__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>