unpackaged/main/default/objects/Account/fields/Shipping_Street_2__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Street_2__c</fullName>
    <label>Alt. Shipping Street</label>
    <type>TextArea</type>
</CustomField>