unpackaged/main/default/objects/Account/fields/Stimulan_Dispenser__c.field-meta.xml
<CustomField>
    <fullName>Stimulan_Dispenser__c</fullName>
    <defaultValue>false</defaultValue>
    <label>STIMULAN Dispenser</label>
    <type>Checkbox</type>
</CustomField>