unpackaged/main/default/objects/Account/fields/Stimulan_Kit__c.field-meta.xml
<CustomField>
    <fullName>Stimulan_Kit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>STIMULAN Kit</label>
    <type>Checkbox</type>
</CustomField>