unpackaged/main/default/objects/Account/fields/Stimulan_Pellets__c.field-meta.xml
<CustomField>
    <fullName>Stimulan_Pellets__c</fullName>
    <defaultValue>false</defaultValue>
    <label>STIMULAN Pellets</label>
    <type>Checkbox</type>
</CustomField>