unpackaged/main/default/objects/Account/fields/Stimulan_Rapid_Cure__c.field-meta.xml
<CustomField>
    <fullName>Stimulan_Rapid_Cure__c</fullName>
    <defaultValue>false</defaultValue>
    <label>STIMULAN Rapid Cure</label>
    <type>Checkbox</type>
</CustomField>