unpackaged/main/default/objects/Account/fields/Surgeon_Description__c.field-meta.xml
<CustomField>
    <fullName>Surgeon_Description__c</fullName>
    <inlineHelpText>This field should include additional information about their interests, fellowship and specialty focus.</inlineHelpText>
    <label>Surgeon Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>