unpackaged/main/default/objects/Account/fields/Target_Annual_Growth_2016__c.field-meta.xml
<CustomField>
    <fullName>Target_Annual_Growth_2016__c</fullName>
    <label>Target Annual Growth 2016</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>