unpackaged/main/default/objects/Account/fields/Target_Hospital_Group_Practice__c.field-meta.xml
<CustomField>
    <fullName>Target_Hospital_Group_Practice__c</fullName>
    <description>The name of the Hospital this Fellow will attend after current Fellowship has compleated</description>
    <inlineHelpText>This field is to record the hospital  and Group Practice Affiliate (if applicable) that the Fellow will be moving to upon completion of their fellowship.
NOTE: If ANY text is added to this field, the &#39;Receiving RSM&#39; field becomes mandatory.</inlineHelpText>
    <label>Target Hospital / Group Practice</label>
    <type>TextArea</type>
</CustomField>