unpackaged/main/default/objects/Account/fields/Top_5_Account__c.field-meta.xml
<CustomField>
    <fullName>Top_5_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Top 5 Account</label>
    <type>Checkbox</type>
</CustomField>