unpackaged/main/default/objects/Account/fields/Update__c.field-meta.xml
<CustomField>
    <fullName>Update__c</fullName>
    <inlineHelpText>Account Owner&#39;s progression with their Key Account stragey</inlineHelpText>
    <label>Update</label>
    <type>TextArea</type>
</CustomField>