unpackaged/main/default/objects/Account/fields/Update_date__c.field-meta.xml
<CustomField>
    <fullName>Update_date__c</fullName>
    <label>Update date</label>
    <type>Date</type>
</CustomField>