unpackaged/main/default/objects/Account/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <inlineHelpText>Adhoc = Surgeon has used the product 3 times.
Regular = Surgeon has used the product at least 6 times.</inlineHelpText>
    <label>User Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Adhoc user</fullName>
            </value>
            <value>
                <fullName>Regular user</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>