unpackaged/main/default/objects/Account/fields/X2_Shipping_City__c.field-meta.xml
<CustomField>
    <fullName>X2_Shipping_City__c</fullName>
    <label>Alt. Shipping City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>