unpackaged/main/default/objects/Account/fields/X2_Shipping_County__c.field-meta.xml
<CustomField>
    <fullName>X2_Shipping_County__c</fullName>
    <label>Alt. Shipping State/Province</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>X2_Shipping_Country__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Aargau</fullName>
            </value>
            <value>
                <fullName>Aberdeenshire</fullName>
            </value>
            <value>
                <fullName>Abu Dhabi</fullName>
            </value>
            <value>
                <fullName>Alabama</fullName>
            </value>
            <value>
                <fullName>Al-Asimah</fullName>
            </value>
            <value>
                <fullName>Alaska</fullName>
            </value>
            <value>
                <fullName>Alsace</fullName>
            </value>
            <value>
                <fullName>Andhra Pradesh</fullName>
            </value>
            <value>
                <fullName>Angoumois</fullName>
            </value>
            <value>
                <fullName>Anjou</fullName>
            </value>
            <value>
                <fullName>Ankara</fullName>
            </value>
            <value>
                <fullName>Arizona</fullName>
            </value>
            <value>
                <fullName>Arkansas</fullName>
            </value>
            <value>
                <fullName>Artois</fullName>
            </value>
            <value>
                <fullName>Asturias</fullName>
            </value>
            <value>
                <fullName>Attiki</fullName>
            </value>
            <value>
                <fullName>Aunis</fullName>
            </value>
            <value>
                <fullName>Auvergne</fullName>
            </value>
            <value>
                <fullName>Avon</fullName>
            </value>
            <value>
                <fullName>Bavaria</fullName>
            </value>
            <value>
                <fullName>Béarn</fullName>
            </value>
            <value>
                <fullName>Bedfordshire</fullName>
            </value>
            <value>
                <fullName>Beirut Governorate</fullName>
            </value>
            <value>
                <fullName>Berkshire</fullName>
            </value>
            <value>
                <fullName>Berry</fullName>
            </value>
            <value>
                <fullName>Borders</fullName>
            </value>
            <value>
                <fullName>Bourbonnais</fullName>
            </value>
            <value>
                <fullName>Brittany</fullName>
            </value>
            <value>
                <fullName>Buckinghamshire</fullName>
            </value>
            <value>
                <fullName>Budapest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>