unpackaged/main/default/objects/Account/fields/X2_Shipping_PostCode__c.field-meta.xml
<CustomField>
    <fullName>X2_Shipping_PostCode__c</fullName>
    <label>Alt. Shipping Zip/Postcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>