unpackaged/main/default/objects/Account/recordTypes/Lead_Forensics.recordType-meta.xml
<RecordType>
    <fullName>Lead_Forensics</fullName>
    <active>true</active>
    <description>Account used for allocating Lead Forensics web site visits that are not relevant to sales accounts.</description>
    <label>Lead Forensics</label>
</RecordType>