unpackaged/main/default/objects/Account/recordTypes/Trust_Groups.recordType-meta.xml
<RecordType>
    <fullName>Trust_Groups</fullName>
    <active>true</active>
    <description>Group entity for a number of hospitals</description>
    <label>Trust / Groups</label>
</RecordType>