unpackaged/main/default/objects/Account/validationRules/Account_Status_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Status_Check</fullName>
    <active>true</active>
    <errorConditionFormula>OR 
( 
AND (TEXT(Account_Status__c) = &#39;Historic&#39;, TEXT(Historic_Since__c) = &#39;&#39;) 
, 
AND (TEXT(Account_Status__c) = &#39;Active&#39;, TEXT(Historic_Since__c) &lt;&gt; &#39;&#39;) 
)</errorConditionFormula>
    <errorDisplayField>Account_Status__c</errorDisplayField>
    <errorMessage>Invalid combination of data for Status and Historic since</errorMessage>
</ValidationRule>