unpackaged/main/default/objects/Account/validationRules/Billing_country_can_not_be_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Billing_country_can_not_be_blank</fullName>
    <active>false</active>
    <errorConditionFormula>BillingCountry = &quot;&quot;</errorConditionFormula>
    <errorDisplayField>BillingCountry</errorDisplayField>
    <errorMessage>Billing country can not be blank</errorMessage>
</ValidationRule>