unpackaged/main/default/objects/Account/validationRules/Billing_country_can_not_be_blank_trust.validationRule-meta.xml
<ValidationRule>
    <fullName>Billing_country_can_not_be_blank_trust</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
BillingCountry = &quot;&quot;,
RecordTypeId = &quot;012U00000005XVt&quot;)</errorConditionFormula>
    <errorDisplayField>BillingCountry</errorDisplayField>
    <errorMessage>Billing country can not be blank</errorMessage>
</ValidationRule>