unpackaged/main/default/objects/Account/validationRules/Biocomposites_Consultant_Expiry.validationRule-meta.xml
<ValidationRule>
    <fullName>Biocomposites_Consultant_Expiry</fullName>
    <active>true</active>
    <description>Makes the Consultant Expiry field mandatory if the Biocomposites Consultant Checkbox is selected.</description>
    <errorConditionFormula>AND ( Biocomposites_Consultant__c = TRUE,
 TEXT ( Consultant_Expiry__c ) = &quot;&quot; )</errorConditionFormula>
    <errorDisplayField>Consultant_Expiry__c</errorDisplayField>
    <errorMessage>Expiry Date is required when Biocomposites Consultant is selected.</errorMessage>
</ValidationRule>