unpackaged/main/default/objects/Account/validationRules/Check_Corporate_Sales_Region.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Corporate_Sales_Region</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
AND(TEXT(Territory__c) = &#39;Corporate&#39;, TEXT(Country__c) = &#39;USA&#39;, TEXT(Sales_Region__c) &lt;&gt; &#39;Wilmington&#39;),

AND(TEXT(Territory__c) = &#39;Corporate&#39;, TEXT(Country__c) = &#39;UK&#39;, TEXT(Sales_Region__c) &lt;&gt; &#39;Keele&#39;),

AND(TEXT(Territory__c) = &#39;Corporate&#39;, TEXT(Country__c) = &#39;China&#39;, TEXT(Sales_Region__c) &lt;&gt; &#39;Shanghai&#39;),

AND(TEXT(Territory__c) = &#39;Corporate&#39;, TEXT(Country__c) = &#39;India&#39;, TEXT(Sales_Region__c) &lt;&gt; &#39;Corporate&#39;),

AND(TEXT(Sales_Region__c) = &#39;Keele&#39;, TEXT(Territory__c) &lt;&gt; &#39;Corporate&#39;),

AND(TEXT(Sales_Region__c) = &#39;Wilimington&#39;, TEXT(Territory__c) &lt;&gt; &#39;Corporate&#39;),

AND(TEXT(Sales_Region__c) = &#39;Shanghai&#39;, TEXT(Territory__c) &lt;&gt; &#39;Corporate&#39;),

AND(TEXT(Sales_Region__c) = &#39;India&#39;, TEXT(Territory__c) &lt;&gt; &#39;Corporate&#39;)
)</errorConditionFormula>
    <errorDisplayField>Sales_Region__c</errorDisplayField>
    <errorMessage>Invalid Territory / Country / Region combination.</errorMessage>
</ValidationRule>