unpackaged/main/default/objects/Account/validationRules/Contract_Products_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Contract_Products_Check</fullName>
    <active>true</active>
    <description>To ensure that Contract 1 Products &amp; Contract 2 Products contain different values.</description>
    <errorConditionFormula>AND(TEXT (Contract_1_Products__c) &lt;&gt; NULL,
TEXT(Contract_1_Products__c) = TEXT(Contract_2_Products__c))</errorConditionFormula>
    <errorDisplayField>Contract_2_Products__c</errorDisplayField>
    <errorMessage>Contract 1 Products and Contract 2 Products must be different</errorMessage>
</ValidationRule>