unpackaged/main/default/objects/Account/validationRules/Credit_status_comment_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Credit_status_comment_mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>( ispickval( Credit_Status__c , &quot;Overdue&quot;) ||  ispickval( Credit_Status__c , &quot;Stop&quot;) ) &amp;&amp; isblank( Credit_Status_Comment__c )</errorConditionFormula>
    <errorDisplayField>Credit_Status__c</errorDisplayField>
    <errorMessage>Credit Status Comments are required when Credit Status is Overdue or Stop.</errorMessage>
</ValidationRule>