unpackaged/main/default/objects/Account/validationRules/Epicor_Account_Code_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Epicor_Account_Code_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Customer_Code__c  = &quot;&quot;, Record_ERP__c = TRUE)</errorConditionFormula>
    <errorDisplayField>Customer_Code__c</errorDisplayField>
    <errorMessage>Account Code is needed if record is to be transferred to Epicor</errorMessage>
</ValidationRule>