unpackaged/main/default/objects/Account/validationRules/Price_Expiry_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Price_Expiry_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND (  RecordType.Id = &#39;Hospitals&#39;,
TEXT(Contract_Price__c) = &quot;Yes&quot;,
TEXT (Contract_Expiry__c) = &quot;&quot;)</errorConditionFormula>
    <errorDisplayField>Contract_Expiry__c</errorDisplayField>
    <errorMessage>Expiry Date is required when Contract Price is selected.</errorMessage>
</ValidationRule>