unpackaged/main/default/objects/Account/validationRules/Receiving_RSM_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Receiving_RSM_Mandatory</fullName>
    <active>true</active>
    <description>If &#39;Post Fellowship target Hospital&#39; is populated, make &#39;Recieving RSM&#39; mandatory</description>
    <errorConditionFormula>AND(
ISBLANK( Receiving_RSM__c ),
 Target_Hospital_Group_Practice__c   &lt;&gt;  &quot;&quot;
)</errorConditionFormula>
    <errorMessage>You need to fill in this field if you have something entered into the &#39;Post Fellowship target Hospital&#39; filed.</errorMessage>
</ValidationRule>