unpackaged/main/default/objects/Account/validationRules/RSM_PickList.validationRule-meta.xml
<ValidationRule>
    <fullName>RSM_PickList</fullName>
    <active>true</active>
    <description>Validation rule with formula that returns Role members that starts with &#39;RM&#39;.</description>
    <errorConditionFormula>$User.UserRoleId = &quot;RM*&quot;</errorConditionFormula>
    <errorMessage>Error</errorMessage>
</ValidationRule>