unpackaged/main/default/objects/Account/validationRules/STIMULAN_User_Beads.validationRule-meta.xml
<ValidationRule>
    <fullName>STIMULAN_User_Beads</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
STIMULAN_User__pc = FALSE,
STIMULAN_Beads__pc = TRUE)</errorConditionFormula>
    <errorDisplayField>STIMULAN_Beads__pc</errorDisplayField>
    <errorMessage>STIMULAN user needs to be selected before you can select STIMULAN beads</errorMessage>
</ValidationRule>