unpackaged/main/default/objects/Account/validationRules/STIMULAN_User_Bullets.validationRule-meta.xml
<ValidationRule>
    <fullName>STIMULAN_User_Bullets</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
STIMULAN_User__pc = FALSE,
STIMULAN_Bullets__pc = TRUE)</errorConditionFormula>
    <errorDisplayField>STIMULAN_Bullets__pc</errorDisplayField>
    <errorMessage>STIMULAN user needs to be selected before you can select STIMULAN bullets</errorMessage>
</ValidationRule>