unpackaged/main/default/objects/Account/validationRules/STIMULAN_User_Paste.validationRule-meta.xml
<ValidationRule>
    <fullName>STIMULAN_User_Paste</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
STIMULAN_User__pc = FALSE,
STIMULAN_Paste__pc = TRUE)</errorConditionFormula>
    <errorDisplayField>STIMULAN_Paste__pc</errorDisplayField>
    <errorMessage>STIMULAN user needs to be selected before you can select STIMULAN paste</errorMessage>
</ValidationRule>