unpackaged/main/default/objects/Account/listViews/All_Hospitals.listView-meta.xml
<ListView>
    <fullName>All_Hospitals</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>Country__c</columns>
    <columns>Territory__c</columns>
    <columns>Sales_Region__c</columns>
    <columns>Incentive_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Hospital</value>
    </filters>
    <label>All Hospitals</label>
</ListView>