unpackaged/main/default/objects/Account/listViews/All_Surgeons.listView-meta.xml
<ListView>
    <fullName>All_Surgeons</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>PC_ADDRESS2_STATE</columns>
    <columns>Country__c</columns>
    <columns>Territory__c</columns>
    <columns>Sales_Region__c</columns>
    <columns>Job_Role__pc</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>PersonAccount.Surgeons</value>
    </filters>
    <label>All Surgeons</label>
</ListView>