unpackaged/main/default/objects/Account/listViews/All_Trusts_Groups.listView-meta.xml
<ListView>
    <fullName>All_Trusts_Groups</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Trust_Groups</value>
    </filters>
    <label>All Trusts / Groups</label>
</ListView>