unpackaged/main/default/objects/Account/listViews/All_UK_Hospitals.listView-meta.xml
<ListView>
    <fullName>All_UK_Hospitals</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>PARENT_NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>Price_Book__c</columns>
    <columns>Top_5_Account__c</columns>
    <columns>Knee_Centre__c</columns>
    <columns>New_CE_Focus__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Hospital</value>
    </filters>
    <filters>
        <field>Country__c</field>
        <operation>equals</operation>
        <value>UK</value>
    </filters>
    <label>All UK Hospitals</label>
    <sharedTo>
        <group>UK_Sales_Team</group>
    </sharedTo>
</ListView>