unpackaged/main/default/objects/Account/listViews/Hospitals_in_my_Sales_Region.listView-meta.xml
<ListView>
    <fullName>Hospitals_in_my_Sales_Region</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>MyTerritory</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Hospital</value>
    </filters>
    <label>Hospitals in my Sales Region</label>
</ListView>