unpackaged/main/default/objects/Account/listViews/Key_Accounts.listView-meta.xml
<ListView>
    <fullName>Key_Accounts</fullName>
    <booleanFilter>1 AND (2 OR 3)</booleanFilter>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
    <columns>Country__c</columns>
    <columns>Territory__c</columns>
    <columns>Sales_Region__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Hospital</value>
    </filters>
    <filters>
        <field>Incentive_Type__c</field>
        <operation>equals</operation>
        <value>Protect Account,Key Account</value>
    </filters>
    <label>Key Accounts</label>
</ListView>